@@ -5,5 +5,6 @@ plug-ins/pygimp/gimpfu.py
 plug-ins/pygimp/gimpui.py
 plug-ins/pygimp/procbrowser.c
 
+plug-ins/pygimp/plug-ins/colorxhtml.py
 plug-ins/pygimp/plug-ins/gimpcons.py
 plug-ins/pygimp/plug-ins/gtkcons.py
