@@ -1,5 +1,13 @@
 2006-09-21  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/pygimp/gimpui.override (_wrap_gimp_dialog_new)
+	* plug-ins/pygimp/pygimp-drawable.c (drw_set_name): allow String
+	or Unicode objects.
+
+	* plug-ins/pygimp/plug-ins/colorxhtml.py: prepared for translation.
+
+2006-09-21  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/gfig/gfig-dialog.c: pass correct parameters to
 	gimp_brush_select_button_new(). Fixes bug #356901.
 
@@ -8,7 +16,6 @@
 
 2006-09-21  Sven Neumann  <sven@gimp.org>
 
-	* plug-ins/script-fu/scripts/test-sphere.scm ("script-fu-test-sphere"): 
 	* app/base/tile-manager.c (read_pixel_data_1) (write_pixel_data_1):
 	use the same code on all platforms. The optimization for bytes == 4
 	was pointless anyway.
